Follow Up Changes

--- a/Impilo App/MainWindow.xaml
+++ b/Impilo App/MainWindow.xaml
@@ -118,11 +118,16 @@
                 <MenuItem Name="AddChow" Click="AddChow_Click" Header="Add a CHOW" HorizontalAlignment="Left" Width="165" Margin="0,0,-25.8,0"/>
                 <MenuItem Name="ViewChow" Click="ViewChow_Click" Header="View CHOW" HorizontalAlignment="Left" Width="158" Margin="0,0,-18.8,0"/>
             </MenuItem>
-            <MenuItem Header="Visits" Height="20">
-                <MenuItem Header="Screening" Name="Screening" HorizontalAlignment="Left" Margin="0"/>
-                <MenuItem Header="Follow-Up" Name="FollowUp" HorizontalAlignment="Left" />
-                <MenuItem Header="Clinic Visit" Name="Clinic" HorizontalAlignment="Left" />
-                <MenuItem Header="Reports" Name="Reports" HorizontalAlignment="Left" />
+
+            <MenuItem Header="Clinic">
+                <MenuItem Name="AddClinic" Click="AddClinic_Click" Header="Add a clinic" HorizontalAlignment="Left" Width="165" Margin="0,0,-25.8,0"/>
+            </MenuItem>
+            
+            <MenuItem Header="Visits" Height="20" >
+                <MenuItem Header="Screening" Name="Screening" HorizontalAlignment="Left" Margin="0" Click="btnScreening_Click"/>
+                <MenuItem Header="Follow-Up" Name="FollowUp" HorizontalAlignment="Left" Click="btnFollowUp_Click"/>
+                <MenuItem Header="Clinic Visit" Name="Clinic" HorizontalAlignment="Left" Click="button_Copy2_Click" />
+                <!--  <MenuItem Header="Reports" Name="Reports" HorizontalAlignment="Left" />-->
             </MenuItem>
             <MenuItem Header="Reports" Height="20">
                 <MenuItem Header="Format 2" Name="Format2" Click="Format2_Click" HorizontalAlignment="Left" />
