--- a/Impilo App/Views/Home/ListClients.xaml
+++ b/Impilo App/Views/Home/ListClients.xaml
@@ -15,9 +15,37 @@
                 <ColumnDefinition Width="59*"/>
                 <ColumnDefinition Width="122*"/>
             </Grid.ColumnDefinitions>
-            <DataGrid AutoGenerateColumns="True" Height="359" HorizontalAlignment="Left" Margin="-8,0,-900,-277" Name="mydatagrid" VerticalAlignment="Top" Width="1089" Grid.ColumnSpan="2" SelectionChanged="mydatagrid_SelectionChanged" />
+            
+            <DataGrid AutoGenerateColumns="True" Height="359" HorizontalAlignment="Left" Margin="0,70,-900,-277" Name="mydatagrid" VerticalAlignment="Top" Width="1200" Grid.ColumnSpan="2" SelectionChanged="mydatagrid_SelectionChanged"/>
             <!--<DataGrid x:Name="mydatagrid" HorizontalAlignment="Left" VerticalAlignment="Top" Width="181" Height="82"/>-->
         </Grid>
         <Label Content="List of clients" HorizontalAlignment="Left" Height="49" FontSize="28" Margin="10,-8,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <GroupBox Header="Filter" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Height="60" Width="1200">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="300"/>
+                    <ColumnDefinition Width="300"/>
+                </Grid.ColumnDefinitions>
+                <Label Content="Search Term" Height="28" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="Left" Margin="8" x:Name="label1_Copy2" VerticalAlignment="Top" FontWeight="Bold" FontSize="12" Width="138" />
+                <TextBox Padding="5" TabIndex="0" Grid.Row="0" Grid.Column="1" Height="28" HorizontalAlignment="Left" Margin="5" x:Name="txtSearch" VerticalAlignment="Top" Width="253"  IsEnabled="True" Grid.ColumnSpan="2" TextChanged="txtSearch_TextChanged" />
+                <ComboBox Padding="5" x:Name="ddlSearch" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Top" Width="251"  Height="28" SelectedIndex="0" IsSynchronizedWithCurrentItem="True" SelectionChanged="ddlSearch_SelectionChanged">
+                    <ComboBoxItem Tag="ClientID" Content="Unique Identifier" IsSelected="True" />
+                    <ComboBoxItem Tag="FirstName" Content="First Name" />
+                    <ComboBoxItem Tag="LastName" Content="Last Name" />
+                    <ComboBoxItem Tag="IDNo" Content="RSA ID Number" />
+                    <ComboBoxItem Tag="ClinicName" Content="Clinic Name" />
+                    <ComboBoxItem Tag="HeadOfHousehold" Content="Head of Household" />
+                    <ComboBoxItem Tag="GPSLatitude" Content="GPS Latitude" />
+                    <ComboBoxItem Tag="GPSLongitude" Content="GPS Longitude" />
+                    <ComboBoxItem Tag="NameofSchool" Content="Name of School" />
+                    <ComboBoxItem Tag="Grade" Content="Grade in School" />
+                    <ComboBoxItem Tag="Area" Content="Area" />                    
+                </ComboBox>
+            </Grid>
+        </GroupBox>
     </Grid>
 </UserControl>
