--- a/Impilo App/Views/ClinicData/AddClinic.xaml
+++ b/Impilo App/Views/ClinicData/AddClinic.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="Impilo_App.Views.CHOW.AddChow"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Impilo_App.Views.ClinicData.AddClinic" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -29,16 +30,7 @@
                         </LinearGradientBrush>
                     </Border.BorderBrush>
                     <Grid x:Name="grid4" Margin="6,6,6.2,18">
-                        <Label Content="Email Address" Height="28" HorizontalAlignment="Left" Margin="19,251,0,0" x:Name="label2_Copy1" VerticalAlignment="Top" FontWeight="Bold" />
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="145,250,0,0" x:Name="txtEmail" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
-                        <Label Content="Password" Height="28" HorizontalAlignment="Left" Margin="485,131,0,0" x:Name="label1_Copy2" VerticalAlignment="Top" FontWeight="Bold" />
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="641,131,0,0" x:Name="txtPassword" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
-                        <Label Content="Cell Number" Height="28" HorizontalAlignment="Left" Margin="484,70,0,0" x:Name="label1_Copy3" VerticalAlignment="Top" FontWeight="Bold" />
-                        <Label Content="Gender" Height="28" HorizontalAlignment="Left" Margin="19,187,0,0" x:Name="label2_Copy3" VerticalAlignment="Top" FontWeight="Bold" />
-                        <TextBox Height="23" HorizontalAlignment="Left" Margin="641,71,0,0" x:Name="txtCellNumber" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
-                        <RadioButton Content="Male" HorizontalAlignment="Left" x:Name="radioMale" Margin="176,193,0,0" GroupName="gender" VerticalAlignment="Top" FontWeight="Bold"/>
-                        <RadioButton Content="Female" HorizontalAlignment="Left" x:Name="radioFemale" Margin="264,193,0,0" GroupName="gender" VerticalAlignment="Top" FontWeight="Bold"/>
-                        <Button Content="Add" Height="36" HorizontalAlignment="Left" Margin="712,226,0,0" x:Name="btnAddCountry" VerticalAlignment="Top" Width="182" FontSize="16" FontWeight="Bold" Click="btnAddCountry_Click" >
+                        <Button Content="Add" Height="36" HorizontalAlignment="Left" Margin="231,321,0,0" x:Name="btnAddClinic" VerticalAlignment="Top" Width="182" FontSize="16" FontWeight="Bold" Click="btnAddClinic_Click" >
                             <Button.Background>
                                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                     <GradientStop Color="#82000000" Offset="0.035" />
@@ -50,13 +42,17 @@
                                 </LinearGradientBrush>
                             </Button.Background>
                         </Button>
-                        <Label Content="Add a CHOW" HorizontalAlignment="Left" Margin="19,10,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="24"/>
+                        <Label Content="Add a clinic" HorizontalAlignment="Left" Margin="21,9,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="24"/>
+                        <Label x:Name="label1_Copy1" VerticalAlignment="Top" Margin="19,132,0,0" Height="28" HorizontalAlignment="Left" FontWeight="Bold" Content="GPS Latitute"/>
+                        <Label x:Name="label2_Copy1" VerticalAlignment="Top" Margin="19,196,0,0" Height="28" HorizontalAlignment="Left" FontWeight="Bold" Content="GPS Longitude"/>
+                        <xctk:MaskedTextBox x:Name="txtLatitude" Margin="150,132,548.8,229" Mask="S00.00000" Height="23" Width="253" ValueDataType="{x:Type System:String}"/>
+                        <xctk:MaskedTextBox x:Name="txtLongitude" Margin="150,196,547.8,165" Mask="E000.00000" Height="23" Width="253" ValueDataType="{x:Type System:String}"/>
+
+
                     </Grid>
                 </Border>
-                <Label Content="Name" Height="28" HorizontalAlignment="Left" Margin="40,89,0,0" x:Name="label2_Copy" VerticalAlignment="Top" FontWeight="Bold" />
-                <Label Content="Surname" Height="28" HorizontalAlignment="Left" Margin="40,148,0,0" x:Name="label3_Copy" VerticalAlignment="Top" FontWeight="Bold" />
+                <Label Content="Clinic Name" Height="28" HorizontalAlignment="Left" Margin="40,89,0,0" x:Name="label2_Copy" VerticalAlignment="Top" FontWeight="Bold" />
                 <TextBox Height="23" HorizontalAlignment="Left" Margin="166,89,0,0" x:Name="txtFirstName" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
-                <TextBox Height="23" HorizontalAlignment="Left" Margin="166,148,0,0" x:Name="txtLastName" VerticalAlignment="Top" Width="253" FontWeight="Bold" />
             </Grid>
         </Border>
 
