--- a/Impilo App/Views/FollowUpVisit/FollowUp.xaml
+++ b/Impilo App/Views/FollowUpVisit/FollowUp.xaml
@@ -357,16 +357,16 @@
                                         <Label Content="Currently on meds" HorizontalAlignment="Left" Margin="12,11,0,10" VerticalAlignment="Center" RenderTransformOrigin="0.375,0.843" FontWeight="Bold" Grid.Row="1"/>
                                         <DatePicker HorizontalAlignment="Left" x:Name="dpHyperStartDate" Height="23" Margin="34,12,0,12"  VerticalAlignment="Center"  Width="188" SelectedDate="{x:Static sys:DateTime.Today}" Grid.Row="2" Grid.Column="1" />
                                         <Label Content="Start date" HorizontalAlignment="Left" Margin="10,10,0,11" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.508,2.12" Grid.Row="2"/>
-                                        <RadioButton Content="Yes" GroupName="hyp1" x:Name="HyperWentToClinic1Yes" HorizontalAlignment="Left" Margin="34,0,0,0" VerticalAlignment="Center" Grid.Column="1"/>
+                                        <RadioButton Content="Yes" GroupName="hyp1" x:Name="HyperWentToClinic1Yes" HorizontalAlignment="Left" Margin="34,16,0,16" VerticalAlignment="Center" Grid.Column="1" Checked="HyperWentToClinic1Yes_Checked"/>
                                         <RadioButton Content="No" GroupName="hyp1" x:Name="HyperWentToClinic1No" HorizontalAlignment="Left" Margin="99,0,0,0" VerticalAlignment="Center" Grid.Column="1"/>
                                         <RadioButton Content="Yes" GroupName="hyp3" x:Name="HyperCurrentlyOnMedsYes" HorizontalAlignment="Left" Margin="36,16,0,16" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1"/>
                                         <RadioButton Content="No" GroupName="hyp3" x:Name="HyperCurrentlyOnMedsNo" HorizontalAlignment="Left" Margin="101,16,0,16" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1"/>
                                         <xctk:IntegerUpDown HorizontalAlignment="Left" x:Name="txtHyperBPReadingSystolic" Height="24" Margin="91,11,0,12" VerticalAlignment="Center" Width="65" Grid.Row="3" Grid.Column="1"/>
-                                        <TextBox HorizontalAlignment="Left" x:Name="txtHyperReferralNo2" Height="23" Margin="34,12,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" Grid.Row="6" Grid.Column="1"/>
+                                        <TextBox HorizontalAlignment="Left" x:Name="txtHyperReferralNo" Height="23" Margin="34,12,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" Grid.Row="6" Grid.Column="1"/>
                                         <Label Content="Refer to clinic" HorizontalAlignment="Left" Margin="12,9,0,11" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26" Grid.Row="5"/>
                                         <Label Content="Referral no." HorizontalAlignment="Left" Margin="10,11,0,10" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="6"/>
-                                        <RadioButton Content="Yes" x:Name="HyperReReferToClinic21" HorizontalAlignment="Left" Margin="36,16,0,0" VerticalAlignment="Top" Grid.Row="5" Grid.Column="1"/>
-                                        <RadioButton Content="No" x:Name="HyperReReferToClinic22" HorizontalAlignment="Left" Margin="101,16,0,0" VerticalAlignment="Top" Grid.Row="5" Grid.Column="1"/>
+                                        <RadioButton Content="Yes" x:Name="HyperReferToClinicYes" HorizontalAlignment="Left" Margin="36,16,0,0" VerticalAlignment="Top" Grid.Row="5" Grid.Column="1"/>
+                                        <RadioButton Content="No" x:Name="HyperReferToClinicNo" HorizontalAlignment="Left" Margin="101,16,0,0" VerticalAlignment="Top" Grid.Row="5" Grid.Column="1"/>
                                         <xctk:IntegerUpDown HorizontalAlignment="Left" x:Name="txtHyperTodayTestReadingSystolic" Height="23" Margin="93,13,0,0" VerticalAlignment="Top" Width="65" Grid.Row="4" Grid.Column="1"/>
                                         <xctk:IntegerUpDown HorizontalAlignment="Left" x:Name="txtHyperTodayTestReadingDiastolic" Height="23" Margin="226,16,0,0" VerticalAlignment="Top" Width="64" Grid.Row="4" Grid.Column="1"/>
                                         <xctk:IntegerUpDown HorizontalAlignment="Left" x:Name="txtHyperBPReadingDiastolic" Height="24" Margin="226,11,0,12"  VerticalAlignment="Center" Width="65" Grid.Row="3" Grid.Column="1"/>
@@ -375,9 +375,9 @@
                                         <Label Content="Diastolic" HorizontalAlignment="Left" Margin="165,14,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.806,0.539" FontWeight="Bold" Grid.Row="4" Grid.Column="1"/>
                                         <Label Content="Systolic" HorizontalAlignment="Left" Margin="36,12,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.806,0.539" FontWeight="Bold" Grid.Row="4" Grid.Column="1"/>
                                         <Label Content="Re-refer to clinic" HorizontalAlignment="Left" Margin="12,10,0,10" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26" Grid.Row="7"/>
-                                        <RadioButton Content="Yes" x:Name="HyperReReferToClinic21_Copy" HorizontalAlignment="Left" Margin="36,17,0,0" VerticalAlignment="Top" Grid.Row="7" Grid.Column="1"/>
-                                        <RadioButton Content="No" x:Name="HyperReReferToClinic22_Copy" HorizontalAlignment="Left" Margin="101,17,0,0" VerticalAlignment="Top" Grid.Row="7" Grid.Column="1"/>
-                                        <TextBox HorizontalAlignment="Left" x:Name="txtHyperReferralNo2_Copy" Height="23" Margin="34,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" Grid.Row="8" Grid.Column="1"/>
+                                        <RadioButton Content="Yes" x:Name="HyperReReferToClinicYes" HorizontalAlignment="Left" Margin="36,17,0,0" VerticalAlignment="Top" Grid.Row="7" Grid.Column="1"/>
+                                        <RadioButton Content="No" x:Name="HyperReReferToClinicNo" HorizontalAlignment="Left" Margin="101,17,0,0" VerticalAlignment="Top" Grid.Row="7" Grid.Column="1"/>
+                                        <TextBox HorizontalAlignment="Left" x:Name="txtHyperReReferralNo" Height="23" Margin="34,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" Grid.Row="8" Grid.Column="1"/>
                                         <Label Content="Re-referral no." HorizontalAlignment="Left" Margin="10,10,0,11" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="8"/>
                                     </Grid>
                                 </GroupBox>
@@ -394,7 +394,7 @@
                                             <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
                                         <Label Content="Revisit in:" HorizontalAlignment="Left" Margin="26,15,0,16" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="1"/>
-                                        <ComboBox HorizontalAlignment="Left" x:Name="comboHyperMedication" Margin="21,20,0,16" VerticalAlignment="Center" Width="188" Grid.Column="1" Grid.Row="1">
+                                        <ComboBox HorizontalAlignment="Left" x:Name="comboHyperRevisit" Margin="21,20,0,16" VerticalAlignment="Center" Width="188" Grid.Column="1" Grid.Row="1">
                                             <ComboBoxItem x:Name="h1week" Content="1 Week"/>
                                             <ComboBoxItem x:Name="h1month" Content="1 Month"/>
                                             <ComboBoxItem x:Name="h3month" Content="3 Months"/>
@@ -473,18 +473,18 @@
                                             <RadioButton Content="No" x:Name="DaiWentToClinic2" GroupName="dia1" HorizontalAlignment="Left" Margin="83,13,0,13" VerticalAlignment="Center" Grid.Column="1" Height="15" Width="35"/>
                                             <RadioButton Content="Yes" x:Name="DiaCurrentlyOnMeds1" GroupName="dia3" HorizontalAlignment="Left" Margin="18,13,0,16" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" Height="14" Width="36"/>
                                             <RadioButton Content="No" x:Name="DiaCurrentlyOnMeds2" GroupName="dia3" HorizontalAlignment="Left" Margin="83,13,0,16" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" Height="14" Width="35"/>
-                                            <TextBox HorizontalAlignment="Left" Height="24" x:Name="txtDiaReferralNo2" Margin="18,16,0,8" TextWrapping="Wrap" VerticalAlignment="Center" Width="188" Grid.Row="6" Grid.Column="1"/>
+                                            <TextBox HorizontalAlignment="Left" Height="24" x:Name="txtDiaReferralNo" Margin="18,16,0,8" TextWrapping="Wrap" VerticalAlignment="Center" Width="188" Grid.Row="6" Grid.Column="1"/>
                                             <Label Content="Refer to clinic" HorizontalAlignment="Left" Margin="10,8,0,8" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26" Grid.Row="5" Height="26" Width="87"/>
                                             <Label Content="Referral no." HorizontalAlignment="Left" Margin="10,12,0,10" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="6" Height="26" Width="76"/>
-                                            <RadioButton Content="Yes" x:Name="DiaReferToClinic21" GroupName="dia4" HorizontalAlignment="Left" Margin="18,14,0,14" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1" Height="14" Width="36"/>
-                                            <RadioButton Content="No" x:Name="DiaReferToClinic22" GroupName="dia4" HorizontalAlignment="Left" Margin="83,14,0,14" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1" Height="14" Width="35"/>
+                                            <RadioButton Content="Yes" x:Name="DiaReferToClinicYes" GroupName="dia4" HorizontalAlignment="Left" Margin="18,14,0,14" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1" Height="14" Width="36"/>
+                                            <RadioButton Content="No" x:Name="DiaReferToClinicNo" GroupName="dia4" HorizontalAlignment="Left" Margin="83,14,0,14" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1" Height="14" Width="35"/>
                                             <TextBox HorizontalAlignment="Left" Height="22" x:Name="txtDiaFollowUpTestReading1" Margin="18,9,0,14" TextWrapping="Wrap" VerticalAlignment="Center" Width="188" Grid.Row="4" Grid.Column="1"/>
                                             <Label Content="Start date unknown" HorizontalAlignment="Left" Margin="10,6,0,25" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26" Grid.Row="3" Height="26" Width="122"/>
                                             <RadioButton Content="Yes" x:Name="DiaReferToClinic21_Copy" GroupName="dia4" HorizontalAlignment="Left" Margin="18,12,0,31" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1" Height="14" Width="36"/>
                                             <Label Content="Re-refer to clinic" HorizontalAlignment="Left" Margin="10,16,0,0" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26" Grid.Row="7" Height="26" Width="114"/>
-                                            <RadioButton Content="Yes" x:Name="DiaReferToClinic21_Copy1" GroupName="dia4" HorizontalAlignment="Left" Margin="18,22,0,6" VerticalAlignment="Center" Grid.Row="7" Grid.Column="1" Height="14" Width="36"/>
-                                            <RadioButton Content="No" x:Name="DiaReferToClinic22_Copy" GroupName="dia4" HorizontalAlignment="Left" Margin="83,22,0,6" VerticalAlignment="Center" Grid.Row="7" Grid.Column="1" Height="14" Width="35"/>
-                                            <TextBox HorizontalAlignment="Left" Height="24" x:Name="txtDiaReferralNo2_Copy" Margin="18,24,0,27" TextWrapping="Wrap" VerticalAlignment="Center" Width="188" Grid.Row="8" Grid.Column="1"/>
+                                            <RadioButton Content="Yes" x:Name="DiaReReferToClinicYes" GroupName="dia4" HorizontalAlignment="Left" Margin="18,22,0,6" VerticalAlignment="Center" Grid.Row="7" Grid.Column="1" Height="14" Width="36"/>
+                                            <RadioButton Content="No" x:Name="DiaReReferToClinicNo" GroupName="dia4" HorizontalAlignment="Left" Margin="83,22,0,6" VerticalAlignment="Center" Grid.Row="7" Grid.Column="1" Height="14" Width="35"/>
+                                            <TextBox HorizontalAlignment="Left" Height="24" x:Name="txtDiaReReferralNo" Margin="18,24,0,27" TextWrapping="Wrap" VerticalAlignment="Center" Width="188" Grid.Row="8" Grid.Column="1"/>
                                             <Label Content="Re-referral no." HorizontalAlignment="Left" Margin="10,20,0,29" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="8" Height="26" Width="114"/>
                                         </Grid>
                                     </GroupBox>
@@ -501,14 +501,14 @@
                                                 <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
                                             <Label Content="Revisit in:" HorizontalAlignment="Left" Margin="26,15,0,16" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="1"/>
-                                            <ComboBox HorizontalAlignment="Left" x:Name="comboHyperMedication1" Margin="21,20,0,16" VerticalAlignment="Center" Width="188" Grid.Column="1" Grid.Row="1">
+                                            <ComboBox HorizontalAlignment="Left" x:Name="comboDiaRevisit" Margin="21,20,0,16" VerticalAlignment="Center" Width="188" Grid.Column="1" Grid.Row="1">
                                                 <ComboBoxItem x:Name="h1week1" Content="1 Week"/>
                                                 <ComboBoxItem x:Name="h1month1" Content="1 Month"/>
                                                 <ComboBoxItem x:Name="h3month1" Content="3 Months"/>
                                                 <ComboBoxItem x:Name="hna1" Content="Not Applicable"/>
                                             </ComboBox>
                                             <Label Content="Outcome" HorizontalAlignment="Left" Margin="26,14,0,17" VerticalAlignment="Center" FontWeight="Bold"/>
-                                            <ComboBox HorizontalAlignment="Left" Margin="21,18,0,0" x:Name="comboHypVisitOutCome1" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Column="1">
+                                            <ComboBox HorizontalAlignment="Left" Margin="21,18,0,0" x:Name="comboDiaVisitOutCome" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Column="1">
                                                 <ComboBoxItem x:Name="hout5" Content="Deceased"/>
                                                 <ComboBoxItem x:Name="hout6" Content="Discharged"/>
                                                 <ComboBoxItem x:Name="hout7" Content="Refused"/>
@@ -596,7 +596,7 @@
                                                 <ComboBoxItem x:Name="hivstatus3" Content="Unclear"/>
 
                                             </ComboBox>
-                                            <ComboBox HorizontalAlignment="Left" x:Name="txtHyperReferralNo2_Copy2" Height="23" Margin="11,0,0,0" VerticalAlignment="Center" Width="188" Grid.Row="4" Grid.Column="1"/>
+                                            <ComboBox HorizontalAlignment="Left" x:Name="comboHivRevisit" Height="23" Margin="11,0,0,0" VerticalAlignment="Center" Width="188" Grid.Row="4" Grid.Column="1"/>
                                             <Label Content="Re-visit." HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="4"/>
                                         </Grid>
                                     </GroupBox>
@@ -666,7 +666,7 @@
                                             <Label Content="Medication" HorizontalAlignment="Left" Margin="12,16,0,14" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="3"/>
                                             <Button x:Name="btnSaveHivMed" Style="{StaticResource BaseButtonStyle}" Content="Save and Add more Meds" HorizontalAlignment="Left" Margin="27,6,0,0" VerticalAlignment="Top" Width="198" Height="25" Grid.Row="4" Grid.Column="1" Visibility="Hidden" />
                                             <Label Content="Outcome" HorizontalAlignment="Left" Margin="14,14,0,19" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="4"/>
-                                            <ComboBox HorizontalAlignment="Left" Margin="27,17,0,0" x:Name="comboHypVisitOutCome1_Copy" Height="24" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Column="1" Grid.Row="4">
+                                            <ComboBox HorizontalAlignment="Left" Margin="27,17,0,0" x:Name="comboHivVisitOutCome1_Copy" Height="24" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Column="1" Grid.Row="4">
                                                 <ComboBoxItem x:Name="hout9" Content="Deceased"/>
                                                 <ComboBoxItem x:Name="hout10" Content="Discharged"/>
                                                 <ComboBoxItem x:Name="hout11" Content="Refused"/>
@@ -859,7 +859,7 @@
                                             <RadioButton Content="No" x:Name="TBConcerns2" HorizontalAlignment="Left" Margin="73,10,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5" Height="15" Width="35"/>
                                             <Button x:Name="btnSaveTbMed" Style="{StaticResource BaseButtonStyle}" Content="Save and Add more Meds" HorizontalAlignment="Left" Margin="39,27,0,0" VerticalAlignment="Top" Width="198" Height="25" Click="btnSaveTbMed_Click" Grid.Column="1" Grid.Row="7" Visibility="Hidden" Grid.RowSpan="2"/>
                                             <Label Content="Outcome" HorizontalAlignment="Left" Margin="10,9,0,12" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="7" Height="26" Width="62"/>
-                                            <ComboBox HorizontalAlignment="Left" Margin="11,10,0,0" x:Name="comboHypVisitOutCome1_Copy1" Height="24" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Row="7" Grid.Column="1">
+                                            <ComboBox HorizontalAlignment="Left" Margin="11,10,0,0" x:Name="comboTbVisitOutCome1_Copy1" Height="24" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Row="7" Grid.Column="1">
                                                 <ComboBoxItem x:Name="hout13" Content="Deceased"/>
                                                 <ComboBoxItem x:Name="hout14" Content="Discharged"/>
                                                 <ComboBoxItem x:Name="hout15" Content="Refused"/>
