--- a/Impilo App/Views/FollowUpVisit/FollowUp.xaml
+++ b/Impilo App/Views/FollowUpVisit/FollowUp.xaml
@@ -838,24 +838,16 @@
                                             <DatePicker HorizontalAlignment="Left" x:Name="txtTBFinishDate" Height="24" Margin="8,9,0,0" VerticalAlignment="Top" Width="188" SelectedDate="{x:Static sys:DateTime.Today}" Grid.Column="1" Grid.Row="4"/>
                                             <Label Content="Finish date" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="4" Height="26" Width="71"/>
 
-                                            <src:MultiComboBox  x:Name="cboTBMedication"  HorizontalAlignment="Left" Margin="10,6,0,3" VerticalAlignment="Center" Width="188" SelectionMode="Multiple" 
-                                          
-												IsCreateNewEnabled="False"
-												DisplaySeparator=", "
-												ItemsSource="{Binding TBMeds}"
-												Grid.Column="1" Grid.Row="6" Height="24"/>
-
                                             <ComboBox HorizontalAlignment="Left" x:Name="comboTBMedication" Margin="8,16,0,0" VerticalAlignment="Top" Width="256" Grid.Column="1" Grid.Row="6" Visibility="Hidden" Grid.RowSpan="2" Height="22">
                                                 <ComboBoxItem x:Name="tbmedi1" Content="INH"/>
                                                 <ComboBoxItem x:Name="tbmedi2" Content="Ritib, rifafour"/>
                                                 <ComboBoxItem x:Name="tbmedi3" Content="Rifinah, RH"/>
                                             </ComboBox>
-                                            <Label Content="Medication" HorizontalAlignment="Left" Margin="11,4,0,0" VerticalAlignment="Top" FontWeight="Bold" Grid.Row="6" Height="26" Width="74"/>
                                             <RadioButton Content="Yes" x:Name="TBConcerns1" HorizontalAlignment="Left" Margin="8,10,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5" Height="15" Width="36"/>
                                             <RadioButton Content="No" x:Name="TBConcerns2" HorizontalAlignment="Left" Margin="73,10,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5" Height="15" Width="35"/>
                                             <Button x:Name="btnSaveTbMed" Style="{StaticResource BaseButtonStyle}" Content="Save and Add more Meds" HorizontalAlignment="Left" Margin="39,27,0,0" VerticalAlignment="Top" Width="198" Height="25" Click="btnSaveTbMed_Click" Grid.Column="1" Grid.Row="7" Visibility="Hidden" Grid.RowSpan="2"/>
-                                            <Label Content="Outcome" HorizontalAlignment="Left" Margin="10,9,0,12" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="7" Height="26" Width="62"/>
-                                            <ComboBox HorizontalAlignment="Left" Margin="11,10,0,0" x:Name="comboTbVisitOutCome1_Copy1" Height="24" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Row="7" Grid.Column="1">
+                                            <Label Content="Outcome" HorizontalAlignment="Left" Margin="10,4,0,3" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="6" Height="26" Width="62"/>
+                                            <ComboBox HorizontalAlignment="Left" Margin="11,5,0,0" x:Name="comboTbVisitOutCome" Height="24" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Row="6" Grid.Column="1">
                                                 <ComboBoxItem x:Name="hout13" Content="Deceased"/>
                                                 <ComboBoxItem x:Name="hout14" Content="Discharged"/>
                                                 <ComboBoxItem x:Name="hout15" Content="Refused"/>
@@ -950,13 +942,13 @@
                                     </GroupBox>
 
 
-                                    <GroupBox Header="On treatment" HorizontalAlignment="Left" Margin="497,1,0,0" VerticalAlignment="Top" Height="424" Width="491">
+                                    <GroupBox Header="On treatment" HorizontalAlignment="Left" Margin="497,1,0,0" VerticalAlignment="Top" Height="432" Width="491">
                                         <Grid>
                                             <Label Content="Currently on meds"
 												HorizontalAlignment="Left" VerticalAlignment="Top" Margin="16,12,0,0" FontWeight="Bold"/>
 
                                             <GroupBox  HorizontalAlignment="Left" x:Name="grpOnTreatment"
-												VerticalAlignment="Top" Height="328" Width="464" Margin="5,64,0,0">
+												VerticalAlignment="Top" Height="336" Width="464" Margin="5,64,0,0">
                                                 <Grid HorizontalAlignment="Left" Height="294" VerticalAlignment="Top"
 													Width="444" Margin="10,24,-2,0">
                                                     <Grid.RowDefinitions>
